<resources>
    <string name="app_name">Together</string>
    <string name="group_image">group image</string>
    <string name="hint_type_group_name">type group name</string>
    <string name="hint_type_group_description">type group description</string>
    <string name="interesta">Interest:</string>
    <string name="required_level">Required Level</string>
    <string name="max_number_of_members">Max number of members</string>
    <string name="members_number">Members number</string>
    <string name="duration">duration</string>
    <string name="duration_months">duration in (months)</string>
    <string name="max_3_months">max 3 months</string>
    <string name="location">Location</string>
    <string name="create_group">create group</string>

    <!-- TODO: Remove or change this placeholder text -->


    <!-- To Do List-->

    <string name="action_lists">Test lists</string>
    <string name="action_board">Test board </string>
    <string name="action_disable_drag">Disable drag</string>
    <string name="action_enable_drag">Enable drag</string>
    <string name="action_list">List (drag on touch image icon)</string>
    <string name="action_grid_vertical">Grid vertical (drag on long press)</string>
    <string name="action_grid_horizontal">Grid horizontal (drag on long press)</string>
    <string name="already_have_an_account_login_here">Already have an Account? Login here</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="enter_you_name">Enter you name</string>
    <string name="address">Address</string>
    <string name="tab_to_select_address">Tab to select address</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="birthdate">Date of birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="create_account">Create Account</string>
    <string name="interests">Interests</string>
    <string name="gender2">Gender:</string>
    <string name="birthdate2">Date of birth:</string>
    <string name="tap_to_change_photo">Tap to change photo</string>
    <string name="description">description:</string>
    <string name="members">Members:</string>
    <string name="save_changes">Save Changes</string>
    <string name="login_to_join_our_journey">Login to join our journey</string>
    <string name="sign_up">Sign up</string>
    <string name="fill_your_information">Fill your information</string>
    <string name="add_image">Add image</string>
    <string name="next">Next</string>
    <string name="profile">Profile</string>
    <string name="your_profile_info">Your profile info</string>
    <string name="edit_interests">Edit Interests</string>
    <string name="edit_your_interests">Edit your interests</string>
    <string name="select_your_new_interests">Select your new interests</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="change_image">Change image</string>

    <string name="leave_group">Leave group</string>
    <string name="logout">Logout</string>


    <string name="hint_search">Search Together</string>
    <string name="slogan">Knowledge for Everyone</string>
    <string name="groups">Groups</string>
    <string name="explore">Explore</string>
    <string name="categories">Categories</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group_name">Group Name</string>

    <string name="you_don_t_have_any_notification_to_be_displayed">You don\'t have any notification to be displayed!</string>
    <string name="you_don_t_have_any_group">You don\'t have any groups</string>

    <string name="empty_search">No Results Found Try Different Keywords</string>
    <string name="empty_interest">This No Groups in This Category</string>
    <string name="You_don_t_have_any_requests_to_be_displayed" />
    <string name="search_result_for_keyword">Search Result For Keyword</string>
    <string name="no_results_found_try_different_keywords">No Results Found Try Different Keywords</string>
    <string name="level">Level:</string>
    <string name="interest">Interest</string>


    <string-array name="countries">

        <item>Brazil</item>
        <item>China</item>
        <item>Egypt</item>
        <item>France</item>
        <item>German</item>
        <item>Spain</item>
        <item>Italy</item>
        <item>Romania</item>
        <item>Oman</item>
        <item>Mexico</item>
        <item>Maldives</item>
        <item>Portugal</item>
        <item>Russia</item>
        <item>Turkey</item>
        <item>Saudi Arabia</item>

    </string-array>

</resources>
