<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingTop="37dp"
        android:background="#f9f9f9"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="#000000"
            android:text="@string/edit_your_interests"
            android:layout_marginBottom="13dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/select_your_new_interests"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/background_shape"
            android:orientation="vertical"



            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="@string/interests"
                android:layout_marginTop="27dp"
                android:layout_marginLeft="37dp"
                />

            <LinearLayout
                android:id="@+id/container_layout"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="18dp"
                android:orientation="vertical"/>

            <Button
                android:id="@+id/save_btn"
                android:layout_width="204dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/login_signup_shape"
                android:layout_marginTop="68dp"
                android:text="@string/save_changes"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginBottom="51dp"


                />




        </LinearLayout>



    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>