<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9"
    tools:context=".BottomNavigationView"
    android:orientation="vertical"
    android:paddingTop="25dp"

    >
    <TextView
        android:id="@+id/tv_profile_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="#000000"
        android:text="@string/explore"
        android:layout_marginBottom="13dp"
        android:paddingHorizontal="24dp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:text="@string/categories"
        android:paddingHorizontal="24dp"

        />
        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint_search"
            android:textSize="16sp"
            android:background="@drawable/search_background_shape"
            android:drawableEnd="@drawable/ic_search_grey"
            android:padding="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:maxLength="100"

            />



        <GridView
            android:id="@+id/categories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:columnWidth="150dp"
            android:gravity="center"
            android:numColumns="auto_fit"
            android:stretchMode="spacingWidthUniform"
            android:verticalSpacing="16dp"

            />

    </androidx.appcompat.widget.LinearLayoutCompat>


