<?xml version="1.0" encoding="utf-8"?>


<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f9f9f9"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:orientation="vertical"


        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="95dp"
                android:layout_height="95dp"

                >

                <View

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:scaleType="fitXY"
                    android:background="@color/light_gray"


                    />

            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:layout_gravity="left"
                    android:textSize="16sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="Mahmoud Fathy"
                    android:layout_marginBottom="14dp"
                    android:background="@color/light_gray"
                    />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:layout_gravity="left"
                    android:textSize="14sp"
                    android:layout_marginLeft="20dp"
                    android:text="mahmoud@gmail.com"
                    android:layout_marginBottom="18dp"
                    android:background="@color/light_gray"

                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:textSize="14sp"
                    android:layout_marginLeft="20dp"
                    android:textStyle="bold"
                    android:textColor="#1177da"
                    android:text="@string/edit_profile"
                    />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="#e8e8e8"
            android:layout_marginHorizontal="19.3dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/address"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="37dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/light_gray"

            android:layout_marginHorizontal="19dp"
            android:layout_marginTop="12dp"
            android:textColor="#000"
            android:hint="address"
            android:inputType="textPostalAddress"
            android:paddingTop="18dp"
            android:paddingLeft="18dp"
            android:paddingBottom="16dp"
            android:editable="false"
            android:clickable="false"
            android:enabled="false"
            android:focusable="false"



            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e8e8e8"
            android:layout_marginHorizontal="19.3dp"
            android:layout_marginBottom="31.8dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/birthdate"
            android:layout_marginLeft="37dp"

            />


        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/light_gray"
            android:layout_marginHorizontal="19dp"
            android:layout_marginTop="12dp"

            android:textColor="#000"
            android:inputType="text"
            android:paddingTop="18dp"
            android:hint="@string/birthdate"
            android:paddingLeft="18dp"
            android:paddingBottom="16dp"
            android:editable="false"
            android:clickable="false"
            android:enabled="false"
            android:focusable="false"



            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e8e8e8"
            android:layout_marginHorizontal="19.3dp"
            android:layout_marginBottom="31.8dp"


            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/gender"
            android:layout_marginLeft="37dp"

            />


        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/light_gray"
            android:layout_marginHorizontal="19dp"
            android:layout_marginTop="12dp"

            android:textColor="#000"
            android:inputType="text"
            android:paddingTop="18dp"
            android:hint="@string/male"
            android:paddingLeft="18dp"
            android:paddingBottom="16dp"
            android:editable="false"
            android:clickable="false"
            android:enabled="false"
            android:focusable="false"


            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e8e8e8"
            android:layout_marginHorizontal="19.3dp"
            android:layout_marginBottom="31.8dp"


            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/interest"
            android:layout_marginLeft="37dp"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/light_gray"
            android:layout_marginHorizontal="19dp"
            android:layout_marginTop="12dp"
            android:textColor="#0f74d7"
            android:textSize="20sp"
            android:paddingTop="18dp"
            android:paddingLeft="18dp"
            android:layout_marginBottom="10dp"
            />





        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#1177da"
            android:text="@string/edit_interests"
            />


    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>
