<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
    android:layout_width="match_parent">
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingTop="37dp"
android:background="#f9f9f9"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="#000000"
     android:text="@string/login"
        android:layout_marginBottom="13dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
android:text="@string/login_to_join_our_journey"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/background_shape"
        android:orientation="vertical"


        >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/together"
        android:layout_gravity="center"
        android:layout_marginTop="31dp"
        />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:background="#e8e8e8"
            android:layout_marginHorizontal="19.3dp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            tools:text="@string/email"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="37dp"
            />

        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="19dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_texts_shapes"
            android:textColor="#000"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingTop="18dp"
            android:paddingLeft="18dp"
            android:paddingBottom="16dp"
            android:textCursorDrawable="@drawable/cursor_color"


            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e8e8e8"
            android:layout_marginHorizontal="19.3dp"
            android:layout_marginBottom="31.8dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            tools:text="@string/password"
            android:layout_marginLeft="37dp"

            />


        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="19dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edit_texts_shapes"
            android:textColor="#000"
            android:inputType="textPassword"
            android:paddingTop="18dp"
            android:hint="@string/password"
            android:paddingLeft="18dp"
            android:paddingBottom="16dp"
            android:textCursorDrawable="@drawable/cursor_color"



            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e8e8e8"
            android:layout_marginHorizontal="19.3dp"

            />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/login_signup_shape"
            android:layout_marginTop="59dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="51dp"


            />

        
        

    </LinearLayout>



</androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>